# document-predict

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_basic.bat  run_irc.bat
examples/basic/: input.txt  output.txt
examples/irc-chat/: input.txt  output.txt
include/: document_predict.h
libpredict/: CMakeLists.txt
libpredict/include/: predict.h
libpredict/src/: predict.cpp
src/: document_predict.cpp  main.cpp  prompt_file.cpp  prompt_file.hpp
